Linear SVC approach completed

--- a/Analysis_Linear_SVC.ipynb
+++ b/Analysis_Linear_SVC.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,11 +13,300 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
-    "## Load data HERE"
+    " cookies = pd.read_csv('clean_cookies.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Unnamed: 0</th>\n",
+       "      <th>id</th>\n",
+       "      <th>sugar to flour ratio</th>\n",
+       "      <th>sugar index</th>\n",
+       "      <th>bake temp</th>\n",
+       "      <th>chill time</th>\n",
+       "      <th>calories</th>\n",
+       "      <th>density</th>\n",
+       "      <th>pH</th>\n",
+       "      <th>grams baking soda</th>\n",
+       "      <th>...</th>\n",
+       "      <th>quality</th>\n",
+       "      <th>butter type</th>\n",
+       "      <th>weight</th>\n",
+       "      <th>crunch factor</th>\n",
+       "      <th>aesthetic appeal</th>\n",
+       "      <th>chocolate</th>\n",
+       "      <th>nuts</th>\n",
+       "      <th>oats</th>\n",
+       "      <th>raisins</th>\n",
+       "      <th>peanut_butter</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.25</td>\n",
+       "      <td>9.5</td>\n",
+       "      <td>300</td>\n",
+       "      <td>15.0</td>\n",
+       "      <td>136.0</td>\n",
+       "      <td>0.99367</td>\n",
+       "      <td>8.10</td>\n",
+       "      <td>0.44</td>\n",
+       "      <td>...</td>\n",
+       "      <td>8</td>\n",
+       "      <td>melted</td>\n",
+       "      <td>15.2</td>\n",
+       "      <td>1.30</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0.23</td>\n",
+       "      <td>3.3</td>\n",
+       "      <td>520</td>\n",
+       "      <td>34.0</td>\n",
+       "      <td>113.0</td>\n",
+       "      <td>0.99429</td>\n",
+       "      <td>8.16</td>\n",
+       "      <td>0.48</td>\n",
+       "      <td>...</td>\n",
+       "      <td>7</td>\n",
+       "      <td>melted</td>\n",
+       "      <td>12.4</td>\n",
+       "      <td>1.71</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0.18</td>\n",
+       "      <td>1.9</td>\n",
+       "      <td>360</td>\n",
+       "      <td>33.0</td>\n",
+       "      <td>106.0</td>\n",
+       "      <td>0.98746</td>\n",
+       "      <td>8.21</td>\n",
+       "      <td>0.83</td>\n",
+       "      <td>...</td>\n",
+       "      <td>9</td>\n",
+       "      <td>melted</td>\n",
+       "      <td>9.4</td>\n",
+       "      <td>1.78</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>3</td>\n",
+       "      <td>4</td>\n",
+       "      <td>0.18</td>\n",
+       "      <td>10.5</td>\n",
+       "      <td>490</td>\n",
+       "      <td>41.0</td>\n",
+       "      <td>124.0</td>\n",
+       "      <td>0.99630</td>\n",
+       "      <td>8.14</td>\n",
+       "      <td>0.35</td>\n",
+       "      <td>...</td>\n",
+       "      <td>7</td>\n",
+       "      <td>melted</td>\n",
+       "      <td>12.2</td>\n",
+       "      <td>1.59</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>4</td>\n",
+       "      <td>5</td>\n",
+       "      <td>0.24</td>\n",
+       "      <td>2.4</td>\n",
+       "      <td>770</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>33.0</td>\n",
+       "      <td>0.99740</td>\n",
+       "      <td>8.09</td>\n",
+       "      <td>0.57</td>\n",
+       "      <td>...</td>\n",
+       "      <td>5</td>\n",
+       "      <td>cubed</td>\n",
+       "      <td>19.8</td>\n",
+       "      <td>1.30</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 21 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Unnamed: 0  id  sugar to flour ratio  sugar index  bake temp  chill time  \\\n",
+       "0           0   1                  0.25          9.5        300        15.0   \n",
+       "1           1   2                  0.23          3.3        520        34.0   \n",
+       "2           2   3                  0.18          1.9        360        33.0   \n",
+       "3           3   4                  0.18         10.5        490        41.0   \n",
+       "4           4   5                  0.24          2.4        770         6.0   \n",
+       "\n",
+       "   calories  density    pH  grams baking soda  ...  quality  butter type  \\\n",
+       "0     136.0  0.99367  8.10               0.44  ...        8       melted   \n",
+       "1     113.0  0.99429  8.16               0.48  ...        7       melted   \n",
+       "2     106.0  0.98746  8.21               0.83  ...        9       melted   \n",
+       "3     124.0  0.99630  8.14               0.35  ...        7       melted   \n",
+       "4      33.0  0.99740  8.09               0.57  ...        5        cubed   \n",
+       "\n",
+       "  weight  crunch factor  aesthetic appeal  chocolate  nuts  oats  raisins  \\\n",
+       "0   15.2           1.30                 3          0     0     0        1   \n",
+       "1   12.4           1.71                 3          0     0     0        1   \n",
+       "2    9.4           1.78                 3          1     1     0        0   \n",
+       "3   12.2           1.59                 3          1     0     0        0   \n",
+       "4   19.8           1.30                 3          1     1     1        0   \n",
+       "\n",
+       "   peanut_butter  \n",
+       "0              0  \n",
+       "1              0  \n",
+       "2              0  \n",
+       "3              0  \n",
+       "4              0  \n",
+       "\n",
+       "[5 rows x 21 columns]"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cookies.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.svm import LinearSVC"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Train test split\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "X = cookies.drop(columns='quality')\n",
+    "y = cookies['quality']\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42, stratify=y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Parameters:\n",
+    "penalty='l2'\n",
+    "loss='squared_hinge'\n",
+    "dual=True\n",
+    "tol=0.0001\n",
+    "C=1.0\n",
+    "multi_class='ovr'\n",
+    "fit_intercept=True\n",
+    "intercept_scaling=1\n",
+    "class_weight=None\n",
+    "verbose=0\n",
+    "random_state=None\n",
+    "max_iter=1000"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "could not convert string to float: 'melted'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-20-24ca2b5e345e>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0mlin_SVC_model\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mLinearSVC\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mlin_SVC_model\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfit\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX_train\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my_train\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m/usr/local/lib/python3.7/site-packages/sklearn/svm/classes.py\u001b[0m in \u001b[0;36mfit\u001b[0;34m(self, X, y, sample_weight)\u001b[0m\n\u001b[1;32m    227\u001b[0m         X, y = check_X_y(X, y, accept_sparse='csr',\n\u001b[1;32m    228\u001b[0m                          \u001b[0mdtype\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfloat64\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0morder\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m\"C\"\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 229\u001b[0;31m                          accept_large_sparse=False)\n\u001b[0m\u001b[1;32m    230\u001b[0m         \u001b[0mcheck_classification_targets\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0my\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    231\u001b[0m         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mclasses_\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0munique\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0my\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/usr/local/lib/python3.7/site-packages/sklearn/utils/validation.py\u001b[0m in \u001b[0;36mcheck_X_y\u001b[0;34m(X, y, accept_sparse, accept_large_sparse, dtype, order, copy, force_all_finite, ensure_2d, allow_nd, multi_output, ensure_min_samples, ensure_min_features, y_numeric, warn_on_dtype, estimator)\u001b[0m\n\u001b[1;32m    754\u001b[0m                     \u001b[0mensure_min_features\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mensure_min_features\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    755\u001b[0m                     \u001b[0mwarn_on_dtype\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mwarn_on_dtype\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 756\u001b[0;31m                     estimator=estimator)\n\u001b[0m\u001b[1;32m    757\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0mmulti_output\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    758\u001b[0m         y = check_array(y, 'csr', force_all_finite=True, ensure_2d=False,\n",
+      "\u001b[0;32m/usr/local/lib/python3.7/site-packages/sklearn/utils/validation.py\u001b[0m in \u001b[0;36mcheck_array\u001b[0;34m(array, accept_sparse, accept_large_sparse, dtype, order, copy, force_all_finite, ensure_2d, allow_nd, ensure_min_samples, ensure_min_features, warn_on_dtype, estimator)\u001b[0m\n\u001b[1;32m    525\u001b[0m             \u001b[0;32mtry\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    526\u001b[0m                 \u001b[0mwarnings\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msimplefilter\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'error'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mComplexWarning\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 527\u001b[0;31m                 \u001b[0marray\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0masarray\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0marray\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdtype\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mdtype\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0morder\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0morder\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    528\u001b[0m             \u001b[0;32mexcept\u001b[0m \u001b[0mComplexWarning\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    529\u001b[0m                 raise ValueError(\"Complex data not supported\\n\"\n",
+      "\u001b[0;32m/usr/local/lib/python3.7/site-packages/numpy/core/numeric.py\u001b[0m in \u001b[0;36masarray\u001b[0;34m(a, dtype, order)\u001b[0m\n\u001b[1;32m    499\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    500\u001b[0m     \"\"\"\n\u001b[0;32m--> 501\u001b[0;31m     \u001b[0;32mreturn\u001b[0m \u001b[0marray\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0ma\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdtype\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcopy\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mFalse\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0morder\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0morder\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    502\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    503\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mValueError\u001b[0m: could not convert string to float: 'melted'"
+     ]
+    }
+   ],
+   "source": [
+    "lin_SVC_model = LinearSVC(penalty=penalty, loss=loss, dual=dual, tol=tol, C=C, multi_class=multi_class, \n",
+    "                          fit_intercept=fit_intercept, intercept_scaling=intercept_scaling, \n",
+    "                          class_weight=class_weight, verbose=verbose, random_state=random_state,\n",
+    "                          max_iter=max_iter)\n",
+    "lin_SVC_model.fit(X_train, y_train)\n",
+    "y_pred = lin_SVC_model.predict(X_test)"
    ]
   },
   {
