Linear SVC - Hyperparameter tunning

--- a/Analysis_Linear_SVC.ipynb
+++ b/Analysis_Linear_SVC.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -46,7 +46,6 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>Unnamed: 0</th>\n",
        "      <th>id</th>\n",
        "      <th>sugar to flour ratio</th>\n",
        "      <th>sugar index</th>\n",
@@ -56,9 +55,8 @@
        "      <th>density</th>\n",
        "      <th>pH</th>\n",
        "      <th>grams baking soda</th>\n",
-       "      <th>...</th>\n",
+       "      <th>bake time</th>\n",
        "      <th>quality</th>\n",
-       "      <th>butter type</th>\n",
        "      <th>weight</th>\n",
        "      <th>crunch factor</th>\n",
        "      <th>aesthetic appeal</th>\n",
@@ -67,12 +65,12 @@
        "      <th>oats</th>\n",
        "      <th>raisins</th>\n",
        "      <th>peanut_butter</th>\n",
+       "      <th>butter type_melted</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>0</td>\n",
        "      <td>1</td>\n",
        "      <td>0.25</td>\n",
        "      <td>9.5</td>\n",
@@ -82,9 +80,8 @@
        "      <td>0.99367</td>\n",
        "      <td>8.10</td>\n",
        "      <td>0.44</td>\n",
-       "      <td>...</td>\n",
+       "      <td>12.1</td>\n",
        "      <td>8</td>\n",
-       "      <td>melted</td>\n",
        "      <td>15.2</td>\n",
        "      <td>1.30</td>\n",
        "      <td>3</td>\n",
@@ -93,10 +90,10 @@
        "      <td>0</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>1</td>\n",
        "      <td>2</td>\n",
        "      <td>0.23</td>\n",
        "      <td>3.3</td>\n",
@@ -106,9 +103,8 @@
        "      <td>0.99429</td>\n",
        "      <td>8.16</td>\n",
        "      <td>0.48</td>\n",
-       "      <td>...</td>\n",
+       "      <td>8.4</td>\n",
        "      <td>7</td>\n",
-       "      <td>melted</td>\n",
        "      <td>12.4</td>\n",
        "      <td>1.71</td>\n",
        "      <td>3</td>\n",
@@ -117,10 +113,10 @@
        "      <td>0</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>2</td>\n",
        "      <td>3</td>\n",
        "      <td>0.18</td>\n",
        "      <td>1.9</td>\n",
@@ -130,9 +126,8 @@
        "      <td>0.98746</td>\n",
        "      <td>8.21</td>\n",
        "      <td>0.83</td>\n",
-       "      <td>...</td>\n",
+       "      <td>14.0</td>\n",
        "      <td>9</td>\n",
-       "      <td>melted</td>\n",
        "      <td>9.4</td>\n",
        "      <td>1.78</td>\n",
        "      <td>3</td>\n",
@@ -141,10 +136,10 @@
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>3</td>\n",
        "      <td>4</td>\n",
        "      <td>0.18</td>\n",
        "      <td>10.5</td>\n",
@@ -154,9 +149,8 @@
        "      <td>0.99630</td>\n",
        "      <td>8.14</td>\n",
        "      <td>0.35</td>\n",
-       "      <td>...</td>\n",
+       "      <td>10.5</td>\n",
        "      <td>7</td>\n",
-       "      <td>melted</td>\n",
        "      <td>12.2</td>\n",
        "      <td>1.59</td>\n",
        "      <td>3</td>\n",
@@ -165,10 +159,10 @@
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>4</td>\n",
        "      <td>5</td>\n",
        "      <td>0.24</td>\n",
        "      <td>2.4</td>\n",
@@ -178,9 +172,8 @@
        "      <td>0.99740</td>\n",
        "      <td>8.09</td>\n",
        "      <td>0.57</td>\n",
-       "      <td>...</td>\n",
+       "      <td>9.4</td>\n",
        "      <td>5</td>\n",
-       "      <td>cubed</td>\n",
        "      <td>19.8</td>\n",
        "      <td>1.30</td>\n",
        "      <td>3</td>\n",
@@ -189,45 +182,43 @@
        "      <td>1</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>5 rows × 21 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "   Unnamed: 0  id  sugar to flour ratio  sugar index  bake temp  chill time  \\\n",
-       "0           0   1                  0.25          9.5        300        15.0   \n",
-       "1           1   2                  0.23          3.3        520        34.0   \n",
-       "2           2   3                  0.18          1.9        360        33.0   \n",
-       "3           3   4                  0.18         10.5        490        41.0   \n",
-       "4           4   5                  0.24          2.4        770         6.0   \n",
+       "   id  sugar to flour ratio  sugar index  bake temp  chill time  calories  \\\n",
+       "0   1                  0.25          9.5        300        15.0     136.0   \n",
+       "1   2                  0.23          3.3        520        34.0     113.0   \n",
+       "2   3                  0.18          1.9        360        33.0     106.0   \n",
+       "3   4                  0.18         10.5        490        41.0     124.0   \n",
+       "4   5                  0.24          2.4        770         6.0      33.0   \n",
        "\n",
-       "   calories  density    pH  grams baking soda  ...  quality  butter type  \\\n",
-       "0     136.0  0.99367  8.10               0.44  ...        8       melted   \n",
-       "1     113.0  0.99429  8.16               0.48  ...        7       melted   \n",
-       "2     106.0  0.98746  8.21               0.83  ...        9       melted   \n",
-       "3     124.0  0.99630  8.14               0.35  ...        7       melted   \n",
-       "4      33.0  0.99740  8.09               0.57  ...        5        cubed   \n",
+       "   density    pH  grams baking soda  bake time  quality  weight  \\\n",
+       "0  0.99367  8.10               0.44       12.1        8    15.2   \n",
+       "1  0.99429  8.16               0.48        8.4        7    12.4   \n",
+       "2  0.98746  8.21               0.83       14.0        9     9.4   \n",
+       "3  0.99630  8.14               0.35       10.5        7    12.2   \n",
+       "4  0.99740  8.09               0.57        9.4        5    19.8   \n",
        "\n",
-       "  weight  crunch factor  aesthetic appeal  chocolate  nuts  oats  raisins  \\\n",
-       "0   15.2           1.30                 3          0     0     0        1   \n",
-       "1   12.4           1.71                 3          0     0     0        1   \n",
-       "2    9.4           1.78                 3          1     1     0        0   \n",
-       "3   12.2           1.59                 3          1     0     0        0   \n",
-       "4   19.8           1.30                 3          1     1     1        0   \n",
+       "   crunch factor  aesthetic appeal  chocolate  nuts  oats  raisins  \\\n",
+       "0           1.30                 3          0     0     0        1   \n",
+       "1           1.71                 3          0     0     0        1   \n",
+       "2           1.78                 3          1     1     0        0   \n",
+       "3           1.59                 3          1     0     0        0   \n",
+       "4           1.30                 3          1     1     1        0   \n",
        "\n",
-       "   peanut_butter  \n",
-       "0              0  \n",
-       "1              0  \n",
-       "2              0  \n",
-       "3              0  \n",
-       "4              0  \n",
-       "\n",
-       "[5 rows x 21 columns]"
+       "   peanut_butter  butter type_melted  \n",
+       "0              0                   1  \n",
+       "1              0                   1  \n",
+       "2              0                   1  \n",
+       "3              0                   1  \n",
+       "4              0                   0  "
       ]
      },
-     "execution_count": 23,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -238,7 +229,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(5175, 20)"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cookies.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -247,7 +258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
