--- a/Standardisation.ipynb
+++ b/Standardisation.ipynb
@@ -55,11 +55,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
-    "trans_cookies.to_csv('trans_cookies.csv')"
+    "trans_cookies.to_csv('trans_cookies.csv', index=False)"
    ]
   },
   {
