Correction: Only features transformed

--- a/Standardisation.ipynb
+++ b/Standardisation.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "features = cookies.drop(columns='quality')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -39,27 +48,54 @@
    "source": [
     "from sklearn.preprocessing import StandardScaler\n",
     "scaler = StandardScaler()\n",
-    "scaler.fit(cookies)\n",
-    "cols = cookies.columns\n",
-    "trans_cookies = pd.DataFrame(scaler.transform(cookies), columns=cols)"
+    "scaler.fit(features)\n",
+    "cols = features.columns\n",
+    "trans_features = pd.DataFrame(scaler.transform(features), columns=cols)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
-    "trans_cookies = trans_cookies.drop(columns='id')"
+    "trans_features = trans_features.drop(columns='id')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
-    "trans_cookies.to_csv('trans_cookies.csv', index=False)"
+    "trans_features.to_csv('trans_features.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "outcome = cookies['quality']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/usr/local/Cellar/ipython/7.2.0/libexec/vendor/lib/python3.7/site-packages/ipykernel_launcher.py:1: FutureWarning: The signature of `Series.to_csv` was aligned to that of `DataFrame.to_csv`, and argument 'header' will change its default value from False to True: please pass an explicit value to suppress this warning.\n",
+      "  \"\"\"Entry point for launching an IPython kernel.\n"
+     ]
+    }
+   ],
+   "source": [
+    "outcome.to_csv('outcome.csv', index = False)"
    ]
   },
   {
