Standardisation process delivers the whole DF transformed

--- a/Standardisation.ipynb
+++ b/Standardisation.ipynb
@@ -64,15 +64,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "trans_features.to_csv('trans_features.csv', index=False)"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 28,
    "metadata": {},
    "outputs": [],
@@ -82,20 +73,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 31,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/usr/local/Cellar/ipython/7.2.0/libexec/vendor/lib/python3.7/site-packages/ipykernel_launcher.py:1: FutureWarning: The signature of `Series.to_csv` was aligned to that of `DataFrame.to_csv`, and argument 'header' will change its default value from False to True: please pass an explicit value to suppress this warning.\n",
-      "  \"\"\"Entry point for launching an IPython kernel.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "outcome.to_csv('outcome.csv', index = False)"
+    "cookies = trans_features"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cookies['quality'] = outcome"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cookies.to_csv('trans_cookies.csv', index=False)"
    ]
   },
   {
