--- a/Oversampling.ipynb
+++ b/Oversampling.ipynb
@@ -6,17 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd\n",
-    "import seaborn as sns"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from imblearn.over_sampling import SMOTE"
+    "import pandas as pd"
    ]
   },
   {
